--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-swipe-component": "^1.4.0",
     "sweetalert": "^2.0.8",
     "sweetalert2": "^7.0.0"
   },
