--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "highcharts": "^6.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.1.1",
+    "react-favicon": "0.0.11",
     "react-highcharts": "^15.0.0",
     "react-responsive": "^4.0.3",
     "react-router": "^4.2.0",
