--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.1.1",
+    "react-dom": "^16.2.0",
     "react-favicon": "0.0.11",
     "react-highcharts": "^15.0.0",
     "react-responsive": "^4.0.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-slick": "^0.16.0",
+    "react-sliding-pane": "^2.0.1",
     "react-swipe-component": "^1.4.0",
     "react-transition-group": "^1.2.1",
     "style-loader": "0.19.0",
